unpackaged/main/default/objects/Bid_Catchup_workshops__c/Bid_Catchup_workshops__c.object-meta.xml
<CustomObject>
    <label>Catchup and Workshop</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Catchup and Workshop</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catchup and Workshops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>