unpackaged/main/default/objects/Bid_Catchup_workshops__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <label>Bid</label>
    <referenceTo>BID__c</referenceTo>
    <relationshipName>Bid_Catchup_workshops</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>