unpackaged/main/default/objects/Bid_Catchup_workshops__c/fields/Workshop_Name__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Name__c</fullName>
    <label>Workshop Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>